@@ -1,3 +1,12 @@
+2006-11-20  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/mapv4v6addr.h (map_v4v6_address): Optimize a bit.
+
+2006-11-18  Bruno Haible  <bruno@clisp.org>
+
+	* sysdeps/unix/sysv/linux/i386/getgroups.c (__getgroups): Invoke
+	__sysconf only after having tried to call getgroups32.
+
 2006-11-19  Ulrich Drepper  <drepper@redhat.com>
 
 	* nss/nss_files/files-hosts.c (LINE_PARSER): Support IPv6-style
